--- a/index.html
+++ b/index.html
@@ -2,16 +2,33 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="shortcut icon" href="">
 	<title>Project 1</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<script src="http://static.smallpicture.com/bootstrap/js/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
+	  <!-- SOCKET STUFF -->
+  	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
+
+ 	<script type="text/javascript">
+    
+    /// SOCKET STUFF
+    var socket = io.connect();
+    
+    socket.on('connect', function() {
+      console.log("Connected");
+    });
+
+
+  </script>
 
 </head>
 <body>
 <main>
+<div id="poetryzone">
 <div id="drophere">
 
+</div>
 </div>
 <div class="right">
 <button onClick = theNouns()>get nouns</button>
